welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:4: error: value avance is not a member of Unit
def growFlowers() {dessineFleur(Color.RED);avance();avance();avance();dessineFleur(Color.CYAN);recule();recule();recule();recule();recule();droite()avance();avance();gauche();avance();avance();dessineFleur(Color.ORANGE);recule();recule();recule();droite();avance();avance();gauche();dessineFleur(Color.PINK);avance();avance();avance();dessineFleur(Color.GREEN)} 
                                                                                                                                                    ^